# cmx-standalone

./: README.md  pom.xml  pyproject.toml  setup.py
app/: __init__.py  __main__.py  auth.py  gui.py
jwt_desktop_client.egg-info/: PKG-INFO  SOURCES.txt
src/main/java/com/example/application/: MainView.java  TokenRequest.java  TokenService.java  VaadinJwtGeneratorApplication.java
src/main/resources/: application.properties
tests/: test_auth.py
