[project]
name = "jwt-desktop-client"
version = "0.1.0"
description = "Application graphique Tkinter pour générer un JWT à partir d'identifiants client."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = [
    ".",
]
